一些 脚本和demo

--- a/package.json
+++ b/package.json
@@ -4,18 +4,30 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "suv-dev": "vite    --config  ./entries/self-use-version/self-use-version.vite.config.js",
+    "suv-build-inner": "vite    --config  ./entries/self-use-version/self-use-version.vite.config.js",
+    "copy-oss": "node ./job/copy-oss.js",
+    "copy-oss-2": "node ./job/copy-oss.js dist",
+    "build-in-oss": "node ./job/build-in-oss.js",
+    "remove-dist": "node ./job/remove-dist.js",
+    "create-version": "node ./job/create-version.js",
+    "copy-html": "node ./job/copy-html.js",
+    "suv-build": "run-s remove-dist create-version  copy-oss build-in-oss suv-build-inner  copy-html copy-oss-2",
+    "output-env-config": "node ./job/output-env-config.js",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
     "@quasar/extras": "^1.16.5",
+    "axios": "^1.4.0",
     "quasar": "^2.12.3",
     "vue": "^3.3.4"
   },
   "devDependencies": {
     "@quasar/vite-plugin": "^1.4.1",
     "@vitejs/plugin-vue": "^4.2.3",
+    "npm-run-all": "^4.1.5",
     "sass": "^1.32.12",
     "vite": "^4.4.5"
   }
