当前的启动命令 解释文档

--- a/package.json
+++ b/package.json
@@ -4,19 +4,19 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "suv-dev": "vite    --config  ./entries/self-use-version/self-use-version.vite.config.js",
-    "suv-build-inner": "vite    --config  ./entries/self-use-version/self-use-version.vite.config.js",
+    "dev-suv": "vite    --config  ./entries/self-use-version/self-use-version.vite.config.js",
+    "build-suv-inner": "vite  build  --config  ./entries/self-use-version/self-use-version.vite.config.js   --mode  production",
     "copy-oss": "node ./job/copy-oss.js",
     "copy-oss-2": "node ./job/copy-oss.js dist",
     "build-in-oss": "node ./job/build-in-oss.js",
     "remove-dist": "node ./job/remove-dist.js",
     "create-version": "node ./job/create-version.js",
     "copy-html": "node ./job/copy-html.js",
-    "suv-build": "run-s remove-dist create-version  copy-oss build-in-oss suv-build-inner  copy-html copy-oss-2",
+    "build-suv": "run-s remove-dist create-version  copy-oss build-in-oss suv-build-inner  copy-html copy-oss-2",
     "output-env-config": "node ./job/output-env-config.js",
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "dev": "echo \" 此命令无用，查看并选择其他合适命令执行启动 。\" && exit 0" ,
+    "build": "echo \" 此命令无用，查看并选择其他合适命令执行构建 。\" && exit 0" 
+ 
   },
   "dependencies": {
     "@quasar/extras": "^1.16.5",
