--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@quasar/extras": "^1.16.5",
     "axios": "^1.4.0",
+    "lodash": "^4.17.21",
     "quasar": "^2.12.3",
     "vue": "^3.3.4"
   },
