外层 命令 基本梳理完成

--- a/package.json
+++ b/package.json
@@ -4,19 +4,41 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev-suv": "vite    --config  ./entries/self-use-version/self-use-version.vite.config.js",
-    "build-suv-inner": "vite  build  --config  ./entries/self-use-version/self-use-version.vite.config.js   --mode  production",
+    "dev-self-use-version": "vite    --config  ./entries/self-use-version/self-use-version.vite.config.js",
+    "build-self-use-version-inner": "vite  build  --config  ./entries/self-use-version/self-use-version.vite.config.js   --mode  production",
     "copy-oss": "node ./job/copy-oss.js",
     "copy-oss-2": "node ./job/copy-oss.js dist",
     "build-in-oss": "node ./job/build-in-oss.js",
     "remove-dist": "node ./job/remove-dist.js",
     "create-version": "node ./job/create-version.js",
     "copy-html": "node ./job/copy-html.js",
-    "build-suv": "run-s remove-dist create-version  copy-oss build-in-oss suv-build-inner  copy-html copy-oss-2",
+    "build-self-use-version": "run-s remove-dist create-version  copy-oss build-in-oss build-self-use-version-inner  copy-html copy-oss-2",
     "export-env-config": "node ./job/export-env-config.js",
-    "dev": "echo \" 此命令无用，查看并选择其他合适命令执行启动 。\" && exit 0" ,
-    "build": "echo \" 此命令无用，查看并选择其他合适命令执行构建 。\" && exit 0" 
- 
+    "export-full-doc": "node ./job/export-full-doc.js",
+    "export-merchant-config": "node ./job/export-merchant-config.js",
+    "dev-development-document-inner": "vite    --config  ./entries/development-document/development-document.vite.config.js",
+    "dev-development-document-alert": "echo \"请注意：项目内部开发文档必须前置执行生成全量文档json 命令 : export-full-doc,确保代码内有最新文档\"",
+    "dev-development-document": "run-s dev-development-document-alert  export-full-doc dev-development-document-inner",
+    "set-env-demo-win": "set MERCHANT-CONFIG-VERSION=123456 && echo \"windows系统环境变量设置示例\"",
+    "set-env-demo-unix": "export MERCHANT-CONFIG-VERSION=123456 &&  echo \"unix系统环境变量设置示例\"",
+    "set-env-demo-cross-env": "cross-env  MERCHANT-CONFIG-VERSION=123456  && echo \"cross-env 跨平台环境变量设置示例\"",
+    "set-env-demo-job-path": "node ./node_modules/cross-env/src/index.js  MERCHANT-CONFIG-VERSION=123456  && echo \"使用 脚本路径 环境变量设置示例\"",
+    "dev-custom-version-inner": "vite    --config  ./entries/custom-version/custom-version.vite.config.js",
+    "custom-merchant-config-version-alert": "echo \"请注意：自定义版本必须设置商户配置版本号，必须前置执行环境变量设置命令,变量名字： MERCHANT-CONFIG-VERSION \"",
+    "dev-custom-version": "run-s custom-merchant-config-version-alert export-merchant-config dev-custom-version-inner",
+    "build-custom-version-inner": "vite  build    --config  ./entries/custom-version/custom-version.vite.config.js   --mode  production ",
+    "build-custom-version": "run-s custom-merchant-config-version-alert export-merchant-config build-custom-version-inner",
+    "build-custom-sdk-inner": "vite  build    --config  ./entries/custom-sdk/custom-sdk.vite.config.js   --mode  production ",
+    "build-custom-sdk": "run-s custom-merchant-config-version-alert export-merchant-config build-custom-sdk-inner",
+    "dev-full-version": "vite    --config  ./entries/full-version/full-version.vite.config.js",
+    "build-full-version": "vite  build    --config  ./entries/full-version/full-version.vite.config.js   --mode  production ",
+    "build-full-sdk": "vite  build    --config  ./entries/full-sdk/full-sdk.vite.config.js   --mode  production ",
+    "dev-check-sdk-esm": "vite    --config  ./entries/check-sdk-esm/check-sdk-esm.vite.config.js",
+    "dev-check-sdk-umd": "vite    --config  ./entries/check-sdk-umd/check-sdk-umd.vite.config.js",
+    "dev-check-sdk-umd-html": "vite    --config  ./entries/check-sdk-umd-html/check-sdk-umd-html.vite.config.js",
+    "dev-postmessage-test": "vite    --config  ./entries/postmessage-test/postmessage-test.vite.config.js",
+    "dev": "echo \" 此命令无用，查看并选择其他合适命令执行启动 。\" && exit 0",
+    "build": "echo \" 此命令无用，查看并选择其他合适命令执行构建 。\" && exit 0"
   },
   "dependencies": {
     "@quasar/extras": "^1.16.5",
@@ -28,7 +50,9 @@
   "devDependencies": {
     "@quasar/vite-plugin": "^1.4.1",
     "@vitejs/plugin-vue": "^4.2.3",
+    "http-server": "^14.1.1",
     "npm-run-all": "^4.1.5",
+    "opener": "^1.5.2",
     "sass": "^1.32.12",
     "vite": "^4.4.5"
   }
