--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "http-server": "^14.1.1",
     "npm-run-all": "^4.1.5",
     "opener": "^1.5.2",
+    "randomstring": "^1.3.0",
     "sass": "^1.32.12",
     "vite": "^4.4.5"
   }
