--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "axios": "^1.4.0",
     "lodash": "^4.17.21",
     "quasar": "^2.12.3",
-    "vue": "^3.3.4"
+    "vue": "^3.3.4",
+    "vue-router": "^4.2.4"
   },
   "devDependencies": {
     "@quasar/vite-plugin": "^1.4.1",
