--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "opener": "^1.5.2",
     "randomstring": "^1.3.0",
     "sass": "^1.32.12",
-    "vite": "^4.4.5"
+    "vite": "^4.4.5",
+    "vue-json-viewer": "^3.0.4"
   }
 }
