--- a/job/default-config/merchant-config-ouzhou.json
+++ b/job/default-config/merchant-config-ouzhou.json
@@ -1,5 +1,8 @@
 {
   "TestComponent": {
-    "use_component": "TestComponent_2"
+    "use_component": "TestComponent_2",
+     "params":{
+      "tableClass":"bg-deep-purple-14"
+     }
   }
 }
