--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev-self-use-version": "vite    --config  ./entries/self-use-version/self-use-version.vite.config.js",
+    "dev-self-use-version-inner": "vite    --config  ./entries/self-use-version/self-use-version.vite.config.js",
+    "dev-self-use-version": "run-s  export-full-version-close  dev-self-use-version-inner",
     "build-self-use-version-inner": "vite  build  --config  ./entries/self-use-version/self-use-version.vite.config.js   --mode  production",
     "copy-oss": "node ./job/copy-oss.js",
     "copy-oss-2": "node ./job/copy-oss.js dist",
@@ -26,21 +27,25 @@
     "build-custom-version": "run-p custom-merchant-config-version-alert export-merchant-config build-custom-version-inner",
     "build-custom-sdk-inner": "vite  build    --config  ./entries/custom-sdk/custom-sdk.vite.config.js   --mode  production ",
     "build-custom-sdk": "run-s custom-merchant-config-version-alert export-merchant-config build-custom-sdk-inner",
-    "dev-full-version": "vite    --config  ./entries/full-version/full-version.vite.config.js",
+    "dev-full-version-inner": "vite    --config  ./entries/full-version/full-version.vite.config.js",
+    "dev-full-version": "run-s  export-full-version-open  dev-full-version-inner",
     "build-full-version": "vite  build    --config  ./entries/full-version/full-version.vite.config.js   --mode  production ",
     "build-full-sdk": "vite  build    --config  ./entries/full-sdk/full-sdk.vite.config.js   --mode  production ",
     "dev-check-sdk-esm": "vite    --config  ./entries/check-sdk-esm/check-sdk-esm.vite.config.js",
     "dev-check-sdk-umd": "vite    --config  ./entries/check-sdk-umd/check-sdk-umd.vite.config.js",
     "dev-check-sdk-umd-html": "vite    --config  ./entries/check-sdk-umd-html/check-sdk-umd-html.vite.config.js",
     "dev-postmessage-test": "vite    --config  ./entries/postmessage-test/postmessage-test.vite.config.js",
-    "export-full-version-config": "node ./job/export-full-version-config.js",
-    
+    "export-full-version-open": "node ./job/export-full-version-config.js full",
+    "export-full-version-close": "node ./job/export-full-version-config.js",
+    "divider-line": "echo \" 此命令无用,用于分割区块 。 上面的是语义化全命令，下面是简写命令。不要混着写。 \" && exit 0",
     "dev": "npm run dev-self-use-version",
     "build": "npm run build-self-use-version",
     "emc": "npm run export-merchant-config",
     "ddd": "npm run dev-development-document",
     "dfv": "npm run dev-full-version",
-    "efvc": "npm run export-full-version-config",
+    "dcv": "npm run dev-custom-version",
+    "efvo": "npm run export-full-version-open",
+    "efvc": "npm run export-full-version-close",
     "echo": "echo \" 此命令无用，查看并选择其他合适命令执行构建 。\" && exit 0"
   },
   "dependencies": {
