菜单数据生成

--- a/src/core/project-config/project-config.doc.json
+++ b/src/core/project-config/project-config.doc.json
@@ -1,8 +1,12 @@
-[
-  {
+{
+  "leftmenu": {
+    "level": 2,
+    "menuName": "客户端PC",
+    "sonName": "project-config"
+  },
+  "props": {
     "category": "project-config",
     "directory-name": "project-config",
-    "descriptions": [
-    ]
+    "descriptions": []
   }
-]
+}
