--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev-self-use-version-inner": "vite    --config  ./entries/self-use-version/self-use-version.vite.config.js",
-    "dev-self-use-version": "run-s  export-full-version-close  dev-self-use-version-inner",
+    "dev-self-use-version": "run-s  export-build-in-config export-full-version-close  dev-self-use-version-inner",
     "build-self-use-version-inner": "vite  build  --config  ./entries/self-use-version/self-use-version.vite.config.js   --mode  production",
     "copy-oss": "node ./job/copy-oss.js",
     "copy-oss-2": "node ./job/copy-oss.js dist",
@@ -46,8 +46,8 @@
     "dcv": "npm run dev-custom-version",
     "efvo": "npm run export-full-version-open",
     "efvc": "npm run export-full-version-close",
-    "eeca": "npm run  export-build-in-config all",
-    "eec": "npm run  export-build-in-config",
+    "ebca": "npm run  export-build-in-config all",
+    "ebc": "npm run  export-build-in-config",
     "echo": "echo \" 此命令无用，查看并选择其他合适命令执行构建 。\" && exit 0"
   },
   "dependencies": {
