本地开发 单个常规版本 命令优化

--- a/package.json
+++ b/package.json
@@ -5,15 +5,14 @@
   "type": "module",
   "scripts": {
     "dev-self-use-version-inner": "vite    --config  ./entries/self-use-version/self-use-version.vite.config.js",
-    "dev-self-use-version": "run-s  export-build-in-config export-full-version-close  dev-self-use-version-inner",
+    "dev-self-use-version": "run-s  export-merchant-config  export-build-in-config export-full-version-close  dev-self-use-version-inner",
     "build-self-use-version-inner": "vite  build  --config  ./entries/self-use-version/self-use-version.vite.config.js   --mode  production",
     "copy-oss": "node ./job/copy-oss.js",
     "copy-oss-2": "node ./job/copy-oss.js dist",
-    "build-in-oss": "node ./job/build-in-oss.js",
     "remove-dist": "node ./job/remove-dist.js self-use-version",
     "export-build-version": "node ./job/export-build-version.js",
     "copy-html": "node ./job/copy-html.js",
-    "build-self-use-version": "run-s remove-dist export-build-version  copy-oss build-in-oss  build-self-use-version-inner  copy-html copy-oss-2",
+    "build-self-use-version": "run-s remove-dist export-build-version    copy-oss   export-merchant-config  export-build-in-config    build-self-use-version-inner  copy-html copy-oss-2",
     "export-build-in-config": "node ./job/export-build-in-config.js",
     "export-full-doc": "node ./job/export-full-doc.js",
     "export-merchant-config": "node ./job/export-merchant-config.js",
