--- a/job/output/merchant/config.json
+++ b/job/output/merchant/config.json
@@ -1,1 +1,1 @@
-{"TestComponent":{"use_component":"TestComponent_2","params":{"tableClass":"bg-deep-purple-14"}},"MERCHANT_CONFIG_VERSION":"yazhou-h5-shiwan-123459-555555","project":"yazhou-h5","write_file_date":1690959859525}
+{"TestComponent":{"use_component":"TestComponent_2","params":{"tableClass":"bg-deep-purple-14"}},"MERCHANT_CONFIG_VERSION":"yazhou-pc","project":"yazhou-pc","write_file_date":1690964675178}
