--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@quasar/vite-plugin": "^1.4.1",
     "@vitejs/plugin-vue": "^4.2.3",
     "cross-env": "^7.0.3",
+    "current-device": "^0.10.2",
     "http-server": "^14.1.1",
     "npm-run-all": "^4.1.5",
     "opener": "^1.5.2",
