--- a/.env.development
+++ b/.env.development
@@ -11,7 +11,7 @@
         
         VITE_APP_versionName=undefined
         
-        VITE_APP_versionDate=8/4/2023, 7:37:14 PM
+        VITE_APP_versionDate=2023/8/4 20:42:12
         
         VITE_APP_max_width=1350
         
