--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.16.5",
+    "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
     "current-device": "^0.10.2",
     "lodash": "^4.17.21",
