--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "lodash": "^4.17.21",
     "mitt": "^3.0.1",
     "quasar": "^2.12.3",
+    "redux": "^4.2.1",
     "vue": "^3.3.4",
     "vue-i18n": "^9.2.2",
     "vue-router": "^4.2.4"
