--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "quasar": "^2.12.3",
     "redux": "^4.2.1",
     "vue": "^3.3.4",
+    "vue-draggable-resizable": "^2.3.0",
     "vue-i18n": "^9.2.2",
     "vue-router": "^4.2.4"
   },
