--- a/job/output/merchant/config.json
+++ b/job/output/merchant/config.json
@@ -1,3 +1,10 @@
-{"TestComponent":{"use_component":"TestComponent_2","params":{"tableClass":"bg-deep-purple-14"}},"MERCHANT_CONFIG_VERSION":"yazhou-pc","project":"yazhou-pc","write_file_date":1691214808861}
-
-
+{
+  "TestComponent": {
+    "use_component": "TestComponent_2",
+    "params": { "tableClass": "bg-deep-purple-14" }
+  },
+  "server_resource":{},
+  "MERCHANT_CONFIG_VERSION": "yazhou-pc",
+  "project": "yazhou-pc",
+  "write_file_date": 1691214808861
+}
