--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev-self-use-version-inner": "vite    --config  ./entries/self-use-version/self-use-version.vite.config.js",
-    "dev-self-use-version": "run-s  export-merchant-config  export-build-in-config export-full-version-close  dev-self-use-version-inner",
+    "dev-self-use-version": "run-s  export-merchant-config export-server-resource export-build-in-config export-full-version-close  dev-self-use-version-inner",
     "build-self-use-version-inner": "vite  build  --config  ./entries/self-use-version/self-use-version.vite.config.js   --mode  production",
     "copy-oss": "node ./job/copy-oss.js",
     "copy-oss-2": "node ./job/copy-oss.js dist",
@@ -16,6 +16,7 @@
     "export-build-in-config": "node ./job/export-build-in-config.js",
     "export-full-doc": "node ./job/export-full-doc.js",
     "export-merchant-config": "node ./job/export-merchant-config.js",
+    "export-server-resource": "node ./job/export-server-resource.js",
     "dev-development-document-inner": "vite    --config  ./entries/development-document/development-document.vite.config.js",
     "dev-development-document-alert": "echo \"请注意：项目内部开发文档必须前置执行生成全量文档json 命令 : export-full-doc,确保代码内有最新文档\"",
     "dev-development-document": "run-s dev-development-document-alert  export-full-doc dev-development-document-inner",
