--- a/job/output/merchant/config.json
+++ b/job/output/merchant/config.json
@@ -1,1 +1,1 @@
-{"TestComponent":{"use_component":"TestComponent_2","params":{"tableClass":"bg-deep-purple-14"}},"server_resource":{},"MERCHANT_CONFIG_VERSION":"yazhou-h5","project":"yazhou-h5","write_file_date":1691398166133}
+{"TestComponent":{"use_component":"TestComponent_2","params":{"tableClass":"bg-deep-purple-14"}},"server_resource":{},"MERCHANT_CONFIG_VERSION":"yazhou-pc","project":"yazhou-pc","write_file_date":1691474766053}
