--- a/package.json
+++ b/package.json
@@ -55,6 +55,8 @@
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
     "current-device": "^0.10.2",
+    "dexie": "^3.2.4",
+    "licia": "^1.38.2",
     "lodash": "^4.17.21",
     "mitt": "^3.0.1",
     "quasar": "^2.12.3",
