feat: init menu components

--- a/job/default-config/merchant-config-yazhou-h5.json
+++ b/job/default-config/merchant-config-yazhou-h5.json
@@ -5,5 +5,11 @@
       "tableClass":"bg-deep-purple-14"
      }
   },
+  "Menu": {
+    "use_component": "Menu_h5",
+     "params":{
+      "tableClass":"bg-deep-purple-14"
+     }
+  },
   "server_resource":{}
 }
