fix: change use_component

--- a/job/default-config/merchant-config-yazhou-h5.json
+++ b/job/default-config/merchant-config-yazhou-h5.json
@@ -6,7 +6,7 @@
      }
   },
   "Menu": {
-    "use_component": "Menu_h5",
+    "use_component": "H5MenuTemplate1",
      "params":{
       "tableClass":"bg-deep-purple-14"
      }
