添加pako 引入包

--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "licia": "^1.38.2",
     "lodash": "^4.17.21",
     "mitt": "^3.0.1",
+    "pako": "^2.1.0",
     "quasar": "^2.12.3",
     "redux": "^4.2.1",
     "vue": "^3.3.4",
