--- a/.env.development
+++ b/.env.development
@@ -11,7 +11,7 @@
         
         VITE_APP_versionName=undefined
         
-        VITE_APP_versionDate=2023/8/27 13:04:44
+        VITE_APP_versionDate=8/29/2023, 10:50:19 AM
         
         VITE_APP_max_width=1350
         
