--- a/.env.development
+++ b/.env.development
@@ -11,7 +11,7 @@
         
         VITE_APP_versionName=undefined
         
-        VITE_APP_versionDate=2023/8/29 19:33:00
+        VITE_APP_versionDate=8/29/2023, 9:20:08 PM
         
         VITE_APP_max_width=1350
         
