--- a/.env
+++ b/.env
@@ -11,7 +11,7 @@
         
         VITE_APP_versionName=undefined
         
-        VITE_APP_versionDate=2023/8/30 21:59:15
+        VITE_APP_versionDate=9/1/2023, 8:10:45 PM
         
         VITE_APP_max_width=1350
         
@@ -37,13 +37,13 @@
         
         VITE_APP_error_upload_url=https://information-api.sportxxxwo8.com/error_info
         
-        VITE_APP_hidApi=
+        VITE_APP_hidApi=https://www.googletagmanager.com/gtag/js?id=G-H3XWBEMYYL
         
-        VITE_APP_GA_TRACKING_ID=G-3SFG732R1J
+        VITE_APP_GA_TRACKING_ID=G-H3XWBEMYYL
         
-        VITE_APP_current_env=idc_sandbox
+        VITE_APP_current_env=local_test
         
         VITE_APP_BUILD_VERSION=
         
-        VITE_APP_current_env_build_in_oss=%7B%22update_time%22%3A%222023-02-08%2014%3A49%3A26%22%2C%22img%22%3A%5B%22U3QDYuh3lxW1%2FxX5Ei6pSyXARzpIofuA0KTu52Rev1A%3D%22%5D%2C%22static%22%3A%5B%5D%2C%22live_domains%22%3A%7B%22pc%22%3A%22Wgyqkdxr3RAnl0YbHKKnHQ%3D%3D%22%2C%22h5%22%3A%22Wgyqkdxr3RAnl0YbHKKnHQ%3D%3D%22%2C%22end%22%3A%22Wgyqkdxr3RAnl0YbHKKnHQ%3D%3D%22%7D%2C%22file_name%22%3A%22play.json%22%2C%22GAS%22%3A%7B%22api%22%3A%5B%22s7OWtICGLnxK8h7C85vGKx4OIlx46Cs73acPusRuz54%3D%22%5D%7D%2C%22GAB%22%3A%7B%22api%22%3A%5B%22s7OWtICGLnxK8h7C85vGK8qChrgxrydp%2BDzFcALrSMI%3D%22%5D%7D%2C%22api%22%3A%5B%22s7OWtICGLnxK8h7C85vGK%2B%2FGZxEa%2BMuztb%2BpJ7kMPEI%3D%22%2C%22s7OWtICGLnxK8h7C85vGK09%2FrnAWtI4W9GeSBte7imU%3D%22%5D%2C%22update_by%22%3A%22ob%22%2C%22type%22%3A%22%E8%AF%95%E7%8E%A9%E7%8E%AF%E5%A2%83%22%2C%22GAY%22%3A%7B%22api%22%3A%5B%226JRhnqyHZ%2Bf5toRqYXWtuf%2Fjvxgn4RSFd6dqzhh%2BJAFaDKqR3GvdECeXRhscoqcd%22%5D%7D%2C%22GACOMMON%22%3A%7B%22api%22%3A%5B%22s7OWtICGLnxK8h7C85vGK%2B%2FGZxEa%2BMuztb%2BpJ7kMPEI%3D%22%2C%22s7OWtICGLnxK8h7C85vGK09%2FrnAWtI4W9GeSBte7imU%3D%22%5D%7D%7D
+        VITE_APP_current_env_build_in_oss=%7B%22img%22%3A%5B%224dWmyPxV9%2BvsSqYXkBo4NjsYFiMbuQysCah8C6GllsbeEx%2BQpGN9PK%2BbOm9lsKyG%22%5D%2C%22static%22%3A%5B%5D%2C%22file_name%22%3A%22test.json%22%2C%22chatroom%22%3A%5B%22Wgyqkdxr3RAnl0YbHKKnHQ%3D%3D%22%5D%2C%22GAB%22%3A%7B%22api%22%3A%5B%22wpS6jQ6pOCFaf5gUn%2FskSDsYFiMbuQysCah8C6GllsbeEx%2BQpGN9PK%2BbOm9lsKyG%22%2C%22wpS6jQ6pOCFaf5gUn%2FskSDsYFiMbuQysCah8C6GllsbeEx%2BQpGN9PK%2BbOm9lsKyG%22%5D%7D%2C%22type%22%3A%22%E6%B5%8B%E8%AF%95%E7%8E%AF%E5%A2%83%22%2C%22testFileUpload%22%3A%7B%22opt%22%3A%22test%20FTP%20123%22%7D%2C%22update_time%22%3A%222023-08-06%2014%3A50%3A56%22%2C%22live_domains%22%3A%7B%22pc%22%3A%22Wgyqkdxr3RAnl0YbHKKnHQ%3D%3D%22%2C%22h5%22%3A%22Wgyqkdxr3RAnl0YbHKKnHQ%3D%3D%22%2C%22end%22%3A%22Wgyqkdxr3RAnl0YbHKKnHQ%3D%3D%22%7D%2C%22GAS%22%3A%7B%22api%22%3A%5B%22EPh262EChsXWphDmCpQNOzsYFiMbuQysCah8C6GllsbeEx%2BQpGN9PK%2BbOm9lsKyG%22%5D%7D%2C%22api%22%3A%5B%22r9xOXBBZdEI5f%2BRyybW9JzsYFiMbuQysCah8C6GllsbeEx%2BQpGN9PK%2BbOm9lsKyG%22%5D%2C%22update_by%22%3A%22ob%22%2C%22GAY%22%3A%7B%22api%22%3A%5B%22isfQZCiWuWsbDiWY34e1218gfnJhkhO%2BgGKfXx%2FtsjI%3D%22%5D%7D%2C%22GACOMMON%22%3A%7B%22api%22%3A%5B%22r9xOXBBZdEI5f%2BRyybW9JzsYFiMbuQysCah8C6GllsbeEx%2BQpGN9PK%2BbOm9lsKyG%22%5D%7D%7D
         
