--- a/.env
+++ b/.env
@@ -11,7 +11,7 @@
         
         VITE_APP_versionName=undefined
         
-        VITE_APP_versionDate=2023/8/30 21:59:15
+        VITE_APP_versionDate=9/1/2023, 5:23:39 PM
         
         VITE_APP_max_width=1350
         
