--- a/package.json
+++ b/package.json
@@ -5,18 +5,19 @@
   "type": "module",
   "scripts": {
     "dev-self-use-version-inner": "vite    --config  ./entries/self-use-version/self-use-version.vite.config.js",
-    "dev-self-use-version": "run-s  export-merchant-config export-server-resource export-build-in-config export-full-version-close  dev-self-use-version-inner",
+    "dev-self-use-version": "run-s  export-merchant-config  export-build-in-config export-server-resource export-css-config export-full-version-close  dev-self-use-version-inner",
     "build-self-use-version-inner": "vite  build  --config  ./entries/self-use-version/self-use-version.vite.config.js   --mode  production",
     "copy-oss": "node ./job/copy-oss.js",
     "copy-oss-2": "node ./job/copy-oss.js dist",
     "remove-dist": "node ./job/remove-dist.js self-use-version",
     "export-build-version": "node ./job/export-build-version.js",
     "copy-html": "node ./job/copy-html.js",
-    "build-self-use-version": "run-s remove-dist export-build-version    copy-oss   export-merchant-config  export-build-in-config    build-self-use-version-inner  copy-html copy-oss-2",
+    "build-self-use-version": "run-s remove-dist export-build-version    copy-oss   export-merchant-config  export-build-in-config export-server-resource export-css-config   build-self-use-version-inner  copy-html copy-oss-2",
     "export-build-in-config": "node ./job/export-build-in-config.js",
     "export-full-doc": "node ./job/export-full-doc.js",
     "export-merchant-config": "node ./job/export-merchant-config.js",
     "export-server-resource": "node ./job/export-server-resource.js",
+    "export-css-config": "node ./job/export-css-config.js",
     "dev-development-document-inner": "vite    --config  ./entries/development-document/development-document.vite.config.js",
     "dev-development-document-alert": "echo \"请注意：项目内部开发文档必须前置执行生成全量文档json 命令 : export-full-doc,确保代码内有最新文档\"",
     "dev-development-document": "run-s dev-development-document-alert  export-full-doc dev-development-document-inner",
@@ -37,6 +38,8 @@
     "dev-postmessage-test": "vite    --config  ./entries/postmessage-test/postmessage-test.vite.config.js",
     "export-full-version-open": "node ./job/export-full-version-config.js full",
     "export-full-version-close": "node ./job/export-full-version-config.js",
+ 
+
     "divider-line": "echo \" 此命令无用,用于分割区块 。 上面的是语义化全命令，下面是简写命令。不要混着写。 \" && exit 0",
     "dev": "npm run dev-self-use-version",
     "build": "npm run build-self-use-version",
