--- a/job/default-config/merchant-config-ouzhou-h5.json
+++ b/job/default-config/merchant-config-ouzhou-h5.json
@@ -1,8 +1,14 @@
 {
   "TestComponent": {
     "use_component": "TestComponent_2",
-     "params":{
-      "tableClass":"bg-deep-purple-14"
-     }
+    "params": {
+      "tableClass": "bg-deep-purple-14"
+    }
+  },
+  "Menu": {
+    "use_component": "H5MenuTemplate1",
+    "params": {
+      "tableClass": "bg-deep-purple-14"
+    }
   }
 }
