写入配置更改

--- a/job/default-config/merchant-config-yazhou-h5-local.json
+++ b/job/default-config/merchant-config-yazhou-h5-local.json
@@ -1,15 +1,17 @@
 {
-  "TestComponent": {
-    "use_component": "TestComponent_2",
-     "params":{
-      "tableClass":"bg-deep-purple-14"
-     }
-  },
-  "Menu": {
-    "use_component": "H5MenuTemplate1",
-     "params":{
-      "tableClass":"bg-deep-purple-14"
-     }
+  "component":{
+    "TestComponent": {
+      "use_component": "TestComponent_2",
+       "params":{
+        "tableClass":"bg-deep-purple-14"
+       }
+    },
+    "Menu": {
+      "use_component": "H5MenuTemplate1",
+       "params":{
+        "tableClass":"bg-deep-purple-14"
+       }
+    }
   },
   "server_resource":{},
   "css":{
