--- a/package.json
+++ b/package.json
@@ -67,7 +67,8 @@
     "vue-currency-input": "^3.0.5",
     "vue-draggable-resizable": "^2.3.0",
     "vue-i18n": "^9.2.2",
-    "vue-router": "^4.2.4"
+    "vue-router": "^4.2.4",
+    "clipboard": "^2.0.11"
   },
   "devDependencies": {
     "@quasar/vite-plugin": "^1.4.1",
