--- a/job/default-config/merchant-config-yazhou-h5.json
+++ b/job/default-config/merchant-config-yazhou-h5.json
@@ -53,6 +53,12 @@
     },
     "h5-set-switch": {
       "day": "https://user-h5-bw3.sportxxx278gwf4.com/2023-09-09-17-11-50/image/wwwassets/bw3/menu/set_switch.svg"
+    },
+    "h5-sport-icon-image": {
+      "day": "https://user-h5-bw3.sportxxx278gwf4.com/2023-09-09-17-11-50/image/wwwassets/bw3/menu/sport_menu_02.png"
+    },
+    "h5-sport-active-image":{
+      "day":"https://user-h5-bw3.sportxxx278gwf4.com/2023-09-09-17-11-50/image/wwwassets/bw3/menu/sport_menu_01.png"
     }
   }
 }
