h5首頁css和邏輯

--- a/job/default-config/merchant-config-yazhou-h5.json
+++ b/job/default-config/merchant-config-yazhou-h5.json
@@ -80,6 +80,12 @@
     },
     "home-item-unchecked": {
       "day": "https://user-h5-bw3.sportxxx278gwf4.com/2023-09-09-17-11-50/image/wwwassets/bw3/home/home_unchecked.png"
+    },
+    "icon-balance": {
+      "day": "https://user-h5-bw3.sportxxx278gwf4.com/2023-09-09-17-11-50/image/bw3/svg/home/money.svg"
+    },
+    "icon-notice": {
+      "day": "https://user-h5-bw3.sportxxx278gwf4.com/2023-09-09-17-11-50/image/wwwassets/bw3/home/notice.svg"
     }
   }
 }
