底部菜单修改

--- a/job/default-config/merchant-config-yazhou-h5.json
+++ b/job/default-config/merchant-config-yazhou-h5.json
@@ -86,6 +86,9 @@
     },
     "icon-notice": {
       "day": "https://user-h5-bw3.sportxxx278gwf4.com/2023-09-09-17-11-50/image/wwwassets/bw3/home/notice.svg"
+    },
+    "foot-menu-icon": {
+      "day": "http://test-user-h5-bw3.sportxxxifbdxm2.com/2023-09-18-17-26-10/image/bw3/menu/foot_menubj_y0.png"
     }
   }
 }
