--- a/job/default-config/merchant-config-yazhou-h5.json
+++ b/job/default-config/merchant-config-yazhou-h5.json
@@ -89,6 +89,18 @@
     },
     "foot-menu-icon": {
       "day": "http://test-user-h5-bw3.sportxxxifbdxm2.com/2023-09-18-17-26-10/image/bw3/menu/foot_menubj_y0.png"
+    },
+    "menu-bg-dota": {
+      "day": "http://test-user-h5-bw3.sportxxxifbdxm2.com/2023-09-23-14-55-28/image/bw3/menu/menu-top-background-dota.jpg"
+    },
+    "menu-bg-lol": {
+      "day": "http://test-user-h5-bw3.sportxxxifbdxm2.com/2023-09-23-14-55-28/image/bw3/menu/menu-top-background-lol.jpg"
+    },
+    "menu-bg-wangzhe": {
+      "day": "http://test-user-h5-bw3.sportxxxifbdxm2.com/2023-09-23-14-55-28/image/bw3/menu/menu-top-background-wangzhe.jpg"
+    },
+    "menu-bg-csgo": {
+      "day": "http://test-user-h5-bw3.sportxxxifbdxm2.com/2023-09-23-14-55-28/image/bw3/menu/menu-top-background-csgo.jpg"
     }
   }
 }
