--- a/.gitignore
+++ b/.gitignore
@@ -31,5 +31,5 @@ job/output/*
 .history
 .env* 
 
-./public/yazhou-pc/server-resource/*
-./public/yazhou-h5/server-resource/*
+public/yazhou-pc/server-resource/*
+public/yazhou-h5/server-resource/*
