主题逻辑调整

--- a/package.json
+++ b/package.json
@@ -5,19 +5,24 @@
   "type": "module",
   "scripts": {
     "dev-self-use-version-inner": "vite    --config  ./entries/self-use-version/self-use-version.vite.config.js",
-    "dev-self-use-version": "run-s  remove-dist export-build-version    copy-oss  export-merchant-config  export-build-in-config export-server-resource export-css-config export-full-version-close  dev-self-use-version-inner",
+    "dev-self-use-version": "run-s  remove-dist export-build-version    copy-oss  export-merchant-config  export-build-in-config  resolve-merchant-config export-full-version-close  dev-self-use-version-inner",
     "build-self-use-version-inner": "vite  build  --config  ./entries/self-use-version/self-use-version.vite.config.js   --mode  production",
     "copy-oss": "node ./job/copy-oss.js",
     "copy-oss-2": "node ./job/copy-oss.js dist",
     "remove-dist": "node ./job/remove-dist.js self-use-version",
     "export-build-version": "node ./job/export-build-version.js",
     "copy-html": "node ./job/copy-html.js",
-    "build-self-use-version": "run-s remove-dist export-build-version    copy-oss   export-merchant-config  export-build-in-config export-server-resource export-css-config   build-self-use-version-inner  copy-html copy-oss-2",
+    "build-self-use-version": "run-s remove-dist export-build-version    copy-oss   export-merchant-config  export-build-in-config resolve-merchant-config  build-self-use-version-inner  copy-html copy-oss-2",
     "export-build-in-config": "node ./job/export-build-in-config.js",
     "export-full-doc": "node ./job/export-full-doc.js",
     "export-merchant-config": "node ./job/export-merchant-config.js",
-    "export-server-resource": "node ./job/export-server-resource.js",
+    "export-theme-config": "node ./job/export-theme-config.js",
+    "export-i18n-config": "node ./job/export-i18n-config.js",
+    "export-component-config": "node ./job/export-component-config.js",
     "export-css-config": "node ./job/export-css-config.js",
+    "export-assets-config": "node ./job/export-assets-config.js",
+    "export-js-config": "node ./job/export-js-config.js",
+    "resolve-merchant-config": "run-s export-merchant-config export-theme-config export-i18n-config export-component-config  export-js-config  export-css-config  export-assets-config",
     "dev-development-document-inner": "vite    --config  ./entries/development-document/development-document.vite.config.js",
     "dev-development-document-alert": "echo \"请注意：项目内部开发文档必须前置执行生成全量文档json 命令 : export-full-doc,确保代码内有最新文档\"",
     "dev-development-document": "run-s dev-development-document-alert  export-full-doc dev-development-document-inner",
