--- a/job/default-config/merchant-config-yazhou-h5.json
+++ b/job/default-config/merchant-config-yazhou-h5.json
@@ -1,17 +1,18 @@
 {
   "component": {
-    "TestComponent": {
-      "use_component": "TestComponent_2",
-      "params": {
-        "tableClass": "bg-deep-purple-14"
-      }
-    },
-    "Menu": {
-      "use_component": "H5MenuTemplate1",
-      "params": {
-        "tableClass": "bg-deep-purple-14"
+    "detail": {
+      "TestComponent": {
+        "use_component": "TestComponent_2",
+        "params": {
+          "tableClass": "bg-deep-purple-14"
+        }
+      },
+      "Menu": {
+        "use_component": "H5MenuTemplate1",
+        "params": {
+          "tableClass": "bg-deep-purple-14"
+        }
       }
     }
   }
-
 }
