--- a/package.json
+++ b/package.json
@@ -5,14 +5,15 @@
   "type": "module",
   "scripts": {
     "dev-self-use-version-inner": "vite    --config  ./entries/self-use-version/self-use-version.vite.config.js",
-    "dev-self-use-version": "run-s  remove-dist export-build-version    copy-oss  export-merchant-config  export-build-in-config  resolve-merchant-config export-full-version-close  dev-self-use-version-inner",
+    "dev-self-use-version": "run-s remove-output  remove-dist export-build-version    copy-oss  export-merchant-config  export-build-in-config  resolve-merchant-config export-full-version-close  dev-self-use-version-inner",
     "build-self-use-version-inner": "vite  build  --config  ./entries/self-use-version/self-use-version.vite.config.js   --mode  production",
     "copy-oss": "node ./job/copy-oss.js",
     "copy-oss-2": "node ./job/copy-oss.js dist",
+    "remove-output": "node ./job/remove-output.js",
     "remove-dist": "node ./job/remove-dist.js self-use-version",
     "export-build-version": "node ./job/export-build-version.js",
     "copy-html": "node ./job/copy-html.js",
-    "build-self-use-version": "run-s remove-dist export-build-version    copy-oss   export-merchant-config  export-build-in-config resolve-merchant-config  build-self-use-version-inner  copy-html copy-oss-2",
+    "build-self-use-version": "run-s remove-output remove-dist export-build-version    copy-oss   export-merchant-config  export-build-in-config resolve-merchant-config  build-self-use-version-inner  copy-html copy-oss-2",
     "export-build-in-config": "node ./job/export-build-in-config.js",
     "export-full-doc": "node ./job/export-full-doc.js",
     "export-merchant-config": "node ./job/export-merchant-config.js",
@@ -61,6 +62,7 @@
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
     "calculatorjs": "^1.1.2",
+    "clipboard": "^2.0.11",
     "current-device": "^0.10.2",
     "dexie": "^3.2.4",
     "licia": "^1.38.2",
@@ -73,12 +75,12 @@
     "vue-currency-input": "^3.0.5",
     "vue-draggable-resizable": "^2.3.0",
     "vue-i18n": "^9.2.2",
-    "vue-router": "^4.2.4",
-    "clipboard": "^2.0.11"
+    "vue-router": "^4.2.4"
   },
   "devDependencies": {
     "@quasar/vite-plugin": "^1.4.1",
     "@vitejs/plugin-vue": "^4.2.3",
+    "colors": "^1.4.0",
     "cross-env": "^7.0.3",
     "current-device": "^0.10.2",
     "http-server": "^14.1.1",
