--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "export-full-version-close": "node ./job/export-full-version-config.js",
     "divider-line": "echo \" 此命令无用,用于分割区块 。 上面的是语义化全命令，下面是简写命令。不要混着写。 \" && exit 0",
     "dev": "npm run dev-self-use-version",
+    "dev2": "npm run dev-self-use-version-inner",
     "build": "npm run build-self-use-version",
     "emc": "npm run export-merchant-config",
     "ddd": "npm run dev-development-document",
