--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,8 @@ job/output/*
 
 .history
 .env* 
-
+public/*/server-resource/*
 public/yazhou-pc/server-resource/*
 public/yazhou-h5/server-resource/*
+public/new-pc/server-resource/*
+public/app-h5/server-resource/*
