--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "env-dev":"cross-env NODE_ENV=development",
     "env-prod":"cross-env NODE_ENV=production",
     "dev-self-use-version-inner": "vite    --config  ./entries/self-use-version/self-use-version.vite.config.js",
-    "dev-self-use-version": "run-s remove-output  env-dev  export-build-version-dev export-build-dir-1  remove-dist    copy-oss  export-merchant-config  export-build-in-config  resolve-merchant-config export-full-version-close  dev-self-use-version-inner",
+    "dev-self-use-version": "run-s remove-output  env-dev  export-build-version-dev export-build-dir-1  remove-dist  copy-oss-3   copy-oss  export-merchant-config  export-build-in-config  resolve-merchant-config export-full-version-close  dev-self-use-version-inner",
     "build-self-use-version-inner": "vite  build  --config  ./entries/self-use-version/self-use-version.vite.config.js   --mode  production",
-    "copy-oss": "node ./job/copy-oss.js",
+    "copy-oss": "node ./job/copy-oss.js output",
     "copy-oss-2": "node ./job/copy-oss.js dist",
+    "copy-oss-3": "node ./job/copy-oss.js backup",
     "remove-output": "node ./job/remove-output.js",
     "remove-dist": "node ./job/remove-dist.js",
     "export-build-version-dev": "node ./job/export-build-version.js dev",
@@ -18,7 +19,7 @@
     "export-build-dir": "node ./job/export-build-dir.js ",
     "export-build-dir-1": "node ./job/export-build-dir.js self-use-version",
     "copy-html": "node ./job/copy-html.js",
-    "build-self-use-version": "run-s remove-output env-prod  export-build-version-prod  export-build-dir-1 remove-dist  copy-oss   export-merchant-config  export-build-in-config resolve-merchant-config  export-full-version-close build-self-use-version-inner  copy-html copy-oss-2",
+    "build-self-use-version": "run-s remove-output env-prod  export-build-version-prod  export-build-dir-1 remove-dist  copy-oss-3 copy-oss   export-merchant-config  export-build-in-config resolve-merchant-config  export-full-version-close build-self-use-version-inner  copy-html copy-oss-2",
     "export-build-in-config": "node ./job/export-build-in-config.js",
     "export-full-doc": "node ./job/export-full-doc.js",
     "export-merchant-config": "node ./job/export-merchant-config.js",
