--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
     "copy-oss-3": "node ./job/copy-oss.js backup",
     "remove-output": "node ./job/remove-output.js",
     "remove-dist": "node ./job/remove-dist.js",
+    "remove-dist-assets": "node ./job/remove-dist-assets.js",
     "export-build-version-dev": "node ./job/export-build-version.js dev",
     "export-build-version-prod": "node ./job/export-build-version.js prod",
     "export-build-dir": "node ./job/export-build-dir.js ",
     "export-build-dir-1": "node ./job/export-build-dir.js self-use-version",
     "copy-html": "node ./job/copy-html.js",
-    "build-self-use-version": "run-s remove-output env-prod  export-build-version-prod  export-build-dir-1 remove-dist  copy-oss-3 copy-oss   export-merchant-config  export-build-in-config resolve-merchant-config  export-full-version-close build-self-use-version-inner  copy-html copy-oss-2",
+    "build-self-use-version": "run-s remove-output env-prod  export-build-version-prod  export-build-dir-1 remove-dist  copy-oss-3 copy-oss   export-merchant-config  export-build-in-config resolve-merchant-config  export-full-version-close build-self-use-version-inner  copy-html copy-oss-2  remove-dist-assets ",
     "export-build-in-config": "node ./job/export-build-in-config.js",
     "export-full-doc": "node ./job/export-full-doc.js",
     "export-merchant-config": "node ./job/export-merchant-config.js",
