组件显示切换

--- a/job/default-config/merchant-config-app-h5.json
+++ b/job/default-config/merchant-config-app-h5.json
@@ -12,6 +12,12 @@
         "params": {
           "tableClass": "bg-deep-purple-14"
         }
+      },
+      "BetBox": {
+        "use_component": "BetBoxAppH5_1",
+        "params": {
+          "tableClass": "bg-deep-purple-14"
+        }
       }
     }
   }
