欧洲版投注 -01

--- a/job/default-config/merchant-config-ouzhou-h5.json
+++ b/job/default-config/merchant-config-ouzhou-h5.json
@@ -12,6 +12,12 @@
       "params": {
         "tableClass": "bg-deep-purple-14"
       }
+    },
+    "BetBox": {
+      "use_component": "BetOuzhouH5",
+      "params": {
+        "tableClass": "bg-deep-purple-14"
+      }
     }
   }
 
