欧洲版多组件应用

--- a/job/default-config/merchant-config-ouzhou-pc.json
+++ b/job/default-config/merchant-config-ouzhou-pc.json
@@ -1,8 +1,13 @@
+
 {
-  "TestComponent": {
-    "use_component": "TestComponent_2",
-     "params":{
-      "tableClass":"bg-deep-purple-14"
-     }
+  "component": {
+    "detail": {
+      "TestComponent": {
+        "use_component": "TestComponent_2",
+        "params": {
+          "tableClass": "bg-deep-purple-14"
+        }
+      }
+    }
   }
 }
