--- a/job/default-config/merchant-config-ouzhou-pc.json
+++ b/job/default-config/merchant-config-ouzhou-pc.json
@@ -7,6 +7,30 @@
         "params": {
           "tableClass": "bg-deep-purple-14"
         }
+      },
+      "MatchListCard": {
+        "use_component": "MatchListCard_2",
+        "params": {
+          "tableClass": "bg-deep-purple-14"
+        }
+      },
+      "PlayMatchLeague": {
+        "use_component": "PlayMatchLeague_2",
+        "params": {
+          "tableClass": "bg-deep-purple-14"
+        }
+      },
+      "PlayMatchType": {
+        "use_component": "PlayMatchType_2",
+        "params": {
+          "tableClass": "bg-deep-purple-14"
+        }
+      },
+      "MatchCard": {
+        "use_component": "MatchCardTemplate2",
+        "params": {
+          "tableClass": "bg-deep-purple-14"
+        }
       }
     }
   }
