--- a/job/default-config/merchant-config-ouzhou-pc.json
+++ b/job/default-config/merchant-config-ouzhou-pc.json
@@ -31,6 +31,12 @@
         "params": {
           "tableClass": "bg-deep-purple-14"
         }
+      },
+      "MatchHandicap": {
+        "use_component": "MatchHandicap2",
+        "params": {
+          "tableClass": "bg-deep-purple-14"
+        }
       }
     }
   }
