欧洲版-投注

--- a/job/default-config/merchant-config-ouzhou-pc.json
+++ b/job/default-config/merchant-config-ouzhou-pc.json
@@ -37,6 +37,12 @@
         "params": {
           "tableClass": "bg-deep-purple-14"
         }
+      },
+      "BetBox": {
+        "use_component": "BetBoxOuZhouPC_1",
+        "params": {
+          "tableClass": "bg-deep-purple-14"
+        }
       }
     }
   }
