--- a/job/default-config/merchant-config-yazhou-pc.json
+++ b/job/default-config/merchant-config-yazhou-pc.json
@@ -1,15 +1,18 @@
 {
-   
-    "component": {   "detail": {
-
-        "TestComponent": {
-            "use_component": "TestComponent_2",
-            "params": {
+    "component": {
+        "detail": {
+            "TestComponent": {
+                "use_component": "TestComponent_2",
+                "params": {
+                    "tableClass": "bg-deep-purple-14"
+                }
+            },
+            "BetBox": {
+              "use_component": "BetBoxOuZhouPC_1",
+              "params": {
                 "tableClass": "bg-deep-purple-14"
+              }
             }
         }
-
-    } }
-
- 
+    }
 }
