--- a/package.json
+++ b/package.json
@@ -85,7 +85,8 @@
     "vue-currency-input": "^3.0.5",
     "vue-draggable-resizable": "^2.3.0",
     "vue-i18n": "^9.2.2",
-    "vue-router": "^4.2.4"
+    "vue-router": "^4.2.4",
+    "vue3-draggable-resizable": "^1.6.5"
   },
   "devDependencies": {
     "@quasar/vite-plugin": "^1.4.1",
