欧洲版投注

--- a/job/default-config/merchant-config-yazhou-pc.json
+++ b/job/default-config/merchant-config-yazhou-pc.json
@@ -8,7 +8,7 @@
                 }
             },
             "BetBox": {
-              "use_component": "BetBoxOuZhouPC_1",
+              "use_component": "BetBoxYaZhouPC_1",
               "params": {
                 "tableClass": "bg-deep-purple-14"
               }
