--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
     "dev-self-use-version-inner": "vite    --config  ./entries/self-use-version/self-use-version.vite.config.js",
     "dev-self-use-version": "run-s remove-output  env-dev  export-build-version-dev export-build-dir-1  remove-dist  copy-oss-3   copy-oss  export-merchant-config  export-build-in-config  resolve-merchant-config export-full-version-close  dev-self-use-version-inner",
     "build-self-use-version-inner": "vite  build  --config  ./entries/self-use-version/self-use-version.vite.config.js   --mode  production",
+    "dev-activity-inner":"vite    --config  ./entries/activity/activity.vite.config.js",
+    "build-activity-inner":"vite    --config  ./entries/activity/activity.vite.config.js  --mode  production",
+
+    "dev-activity":"run-s remove-output  env-dev  export-build-version-activity-dev export-build-dir-2  remove-dist copy-oss-3   copy-oss dev-activity-inner",
+    "build-activity":"run-s remove-output env-prod  export-build-version-activity-prod export-build-dir-2  remove-dist copy-oss-3   copy-oss build-activity-inner copy-html copy-oss-2  remove-dist-assets",
+
     "copy-oss": "node ./job/copy-oss.js output",
     "copy-oss-2": "node ./job/copy-oss.js dist",
     "copy-oss-3": "node ./job/copy-oss.js backup",
@@ -17,8 +23,11 @@
     "remove-dist-assets": "node ./job/remove-dist-assets.js",
     "export-build-version-dev": "node ./job/export-build-version.js dev",
     "export-build-version-prod": "node ./job/export-build-version.js prod",
+    "export-build-version-activity-dev": "node ./job/export-build-version-activity.js dev",
+    "export-build-version-activity-prod": "node ./job/export-build-version-activity.js prod",
     "export-build-dir": "node ./job/export-build-dir.js ",
     "export-build-dir-1": "node ./job/export-build-dir.js self-use-version",
+    "export-build-dir-2": "node ./job/export-build-dir.js activity",
     "copy-html": "node ./job/copy-html.js",
     "build-self-use-version": "run-s remove-output env-prod  export-build-version-prod  export-build-dir-1 remove-dist  copy-oss-3 copy-oss   export-merchant-config  export-build-in-config resolve-merchant-config  export-full-version-close build-self-use-version-inner  copy-html copy-oss-2  remove-dist-assets ",
     "export-build-in-config": "node ./job/export-build-in-config.js",
@@ -51,6 +60,7 @@
     "dev-postmessage-test": "vite    --config  ./entries/postmessage-test/postmessage-test.vite.config.js",
     "export-full-version-open": "node ./job/export-full-version-config.js full",
     "export-full-version-close": "node ./job/export-full-version-config.js",
+    
     "divider-line": "echo \" 此命令无用,用于分割区块 。 上面的是语义化全命令，下面是简写命令。不要混着写。 \" && exit 0",
     "dev": "npm run dev-self-use-version",
     "dev2": "npm run dev-self-use-version-inner",
